# Filebin.py

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  test.yml
Filebin/: Errors.py  __init__.py  __main__.py  _classes.py  _constants.py  _http.py  _models.py  _utils.py  api.py  errors.py
tests/: t.py  test.py  test_api.py  test_errors.py  test_models.py
